--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,28 @@
+html {
+    background-color: #A100004D;
+}
+
 body {
-    background-color: #DCACAC
+    width: 600px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 48px 48px 64px 48px
 }
 
 #description {
     border: 1px solid black;
+    background-color: rgba(235, 235, 235, 1);
+}
+
+h1 {
+    margin: 0;
+    color: #A10000;
+}
+
+h2 {
+    
+}
+
+p {
+    
 }
