--- a/styles/style.css
+++ b/styles/style.css
@@ -2,11 +2,14 @@
     --primary-bg-color: hsla(0, 100%, 50%, 0.302);
     --darker-bg-color: hsla(0, 71%, 37%, 0.302);
     --secondary-bg-color: hsla(0, 0%, 100%, 0);
-
-
+    --primary-top-margin: 1.5rem;
+    --primary-margin: 1.25rem;
+    --default-card-shadow: 0 4px 12px hsla(0, 0%, 33%, 1);
 }
 
 /* Shared CSS */
+
+/* Colors */
 
 html {
     background-color: var(--primary-bg-color);
@@ -20,6 +23,16 @@ html {
     background-color: var(--secondary-bg-color);
 }
 
+/* Margins */
+
+.main-body__content {
+    margin: var(--primary-margin);
+}
+
+.main-body__card {
+    margin-top: var(--primary-top-margin);
+}
+
 /* Individual Styling */
 
 html {
@@ -27,16 +40,17 @@ html {
 }
 
 .skiplink {
-   display: inline-block;
-   color: #555;
-   background: #fff;
-   padding: .5em;
-   position: absolute;
-   left: -99999rem;
-   z-index: 100;
+    display: inline-block;
+    color: #555;
+    background: #fff;
+    padding: .5em;
+    position: absolute;
+    left: -99999rem;
+    z-index: 100;
 }
+
 .skiplink:focus {
-   left: 0;
+    left: 0;
 }
 
 
@@ -47,7 +61,7 @@ html {
     padding: 14px 20px;
 }
 
-.site-header__wrapper{
+.site-header__wrapper {
     display: flex;
     gap: 1rem;
 }
@@ -135,29 +149,29 @@ caption {
 
 thead,
 tfoot {
-  background-color: rgb(254, 201, 244);
+    background-color: rgb(254, 201, 244);
 }
 
 th,
 td {
-  border: 1px solid rgb(160 160 160);
-  padding: 8px 10px;
+    border: 1px solid rgb(160 160 160);
+    padding: 8px 10px;
 }
 
 td:last-of-type {
-  text-align: center;
+    text-align: center;
 }
 
-tbody > tr:nth-of-type(even) {
-  background-color: rgb(237 238 242);
+tbody>tr:nth-of-type(even) {
+    background-color: rgb(237 238 242);
 }
 
 tfoot th {
-  text-align: right;
+    text-align: right;
 }
 
 tfoot td {
-  font-weight: bold;
+    font-weight: bold;
 }
 
 .main-footer__container {
@@ -169,7 +183,7 @@ tfoot td {
 }
 
 
-.main-footer__picture{
+.main-footer__picture {
     width: 580px;
     height: 467px;
     min-width: 300px;
@@ -180,7 +194,47 @@ figure {
     margin: 0;
 }
 
-@media (max-width: 440px) {
+.main-body__container {
+    display: grid;
+    max-width: 100%;
+    grid-template-columns: repeat(auto-fit, minmax(50ch, 1fr));
+    gap: 2rem;
+}
+
+.main-body__card,
+.main-body__image {
+    border-radius: 0.75rem;
+}
+
+.main-body__card {
+    display: grid;
+    justify-items: center;
+    max-width: 100%;
+    gap: 1.25em;
+    box-shadow: var(--default-card-shadow);
+}
+
+.main-body__image {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.main-body__recipe {
+    text-align: center;
+    margin: 0 0.75em 0 0.75em;
+}
+
+.main-body__link {
+    order: -1;
+}
+
+@media screen and (max-width: 660px) {
+    .main-body__container {
+        grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
+    }
+}
+
+@media screen and (max-width: 440px) {
 
     body {
         width: 100%;
@@ -219,5 +273,9 @@ figure {
         width: 100%;
         height: 467px;
         object-fit: cover;
+    }
+
+    .main-body__container {
+        grid-template-columns: repeat(auto-fit, minmax(20ch, 1fr));
     }
 }
