Implement clearer sectioning in css, improve custom variables

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,15 +1,17 @@
 :root {
-    --primary-bg-color: hsla(0, 100%, 50%, 0.302);
-    --darker-bg-color: hsla(0, 71%, 37%, 0.302);
+    --primary-bg-color: hsla(306, 100%, 50%, 0.268);
+    --darker-bg-color: hsla(297, 46%, 28%, 0.804);
     --secondary-bg-color: hsla(0, 0%, 100%, 0);
+    --highlighted-heading-color: hsla(0, 100%, 31%, 1);
     --primary-top-margin: 1.5rem;
     --primary-margin: 1.25rem;
     --default-card-shadow: 0 4px 12px hsla(0, 0%, 33%, 1);
 }
 
-/* Shared CSS */
-
-/* Colors */
+/*--------------------------/
+*         Shared CSS        >
+* --------------------------\
+*/
 
 html {
     background-color: var(--primary-bg-color);
@@ -23,7 +25,25 @@ html {
     background-color: var(--secondary-bg-color);
 }
 
-/* Margins */
+.main-body__title {
+    color: var(--highlighted-heading-color);
+}
+
+.main-body__nutrients--header {
+    background-color: rgb(254, 201, 244);
+}
+
+.main-body__nutrients--primary-cell,
+.main-body__nutrients--data-cell {
+    border: 1px solid rgb(160 160 160);
+    padding: 8px 10px;
+}
+
+.main-body__nutrients--body>tr:nth-of-type(even) {
+    background-color: rgb(237 238 242);
+}
+
+/* --- Margins --- */
 
 .main-body__content {
     margin: var(--primary-margin);
@@ -33,11 +53,16 @@ html {
     margin-top: var(--primary-top-margin);
 }
 
-/* Individual Styling */
+/*--------------------------/
+*    Individual Styling     >
+* --------------------------\
+*/
 
 html {
     font-family: "Open Sans", sans-serif;
 }
+
+/* --- Skiplink --- */
 
 .skiplink {
     display: inline-block;
@@ -53,6 +78,7 @@ html {
     left: 0;
 }
 
+/* --- Navbar --- */
 
 .site-header__navbar {
     display: flex;
@@ -71,10 +97,14 @@ html {
     text-decoration: none;
 }
 
+/* --- Main --- */
+
 body {
     max-width: 1280px;
     margin: 0 auto;
 }
+
+/* Main Header */
 
 .main-header__image {
     box-sizing: border-box;
@@ -85,6 +115,8 @@ body {
     border: 1px solid #FCFCFC;
     object-fit: cover;
 }
+
+/* Main Body */
 
 .main-body {
     box-sizing: border-box;
@@ -98,15 +130,14 @@ body {
 
 
 .main-body__description {
-    width: auto;
     padding: 16px;
-    gap: 10px;
     background-color: rgba(235, 235, 235, 1);
 }
 
+/* Main Header */
+
 .main-body__title {
     margin: 0;
-    color: #A10000;
     font-size: 28px;
     font-weight: 700;
 
@@ -125,52 +156,25 @@ body {
 }
 
 .main-body__list,
-.item {
+.main-body__item {
     font-size: 16px;
     font-weight: 400;
     line-height: 32px;
 }
 
-table {
+.main-body__nutrients {
     font-family: sans-serif;
     border-collapse: collapse;
-    border: 2px solid rgb(140 140 140);
+    border: 2px solid rgb(0, 0, 0);
     font-size: 0.8rem;
     margin-top: 20px;
     letter-spacing: 1px;
 }
 
-caption {
+.main-body__caption {
     caption-side: bottom;
     padding: 10px;
     margin-bottom: 10px;
-    font-weight: bold;
-}
-
-thead,
-tfoot {
-    background-color: rgb(254, 201, 244);
-}
-
-th,
-td {
-    border: 1px solid rgb(160 160 160);
-    padding: 8px 10px;
-}
-
-td:last-of-type {
-    text-align: center;
-}
-
-tbody>tr:nth-of-type(even) {
-    background-color: rgb(237 238 242);
-}
-
-tfoot th {
-    text-align: right;
-}
-
-tfoot td {
     font-weight: bold;
 }
 
@@ -223,7 +227,7 @@ figure {
 /* .main-body__header,
 .main-body__link--image,
 .main-body__image {
-    grid-column: 2 / 3;
+    grid-column: 1 / 2;
 } */
 
 .main-body__image {
