--- a/styles/global.css
+++ b/styles/global.css
@@ -144,7 +144,7 @@ body {
 
 .main-header__image {
     width: 100%;
-    height: 500px;
+    height: clamp(250px, 40vw, 500px);
     border: 1px solid #FCFCFC;
     object-fit: cover;
 }
@@ -157,4 +157,12 @@ body {
     margin-inline: auto;
     margin-bottom: 20px;
     padding: 48px 48px 64px 48px;
+}
+
+@media screen and (width < 660px) {
+
+}
+
+@media screen and (width < 440px) {
+
 }
