--- a/styles/home.css
+++ b/styles/home.css
@@ -2,6 +2,11 @@
     --default-card-shadow: 0 4px 12px hsla(0, 0%, 33%, 1);
 }
 
+/*--------------------------/
+*    Individual Styling     >
+* --------------------------\
+*/
+
 .main-body__container {
     display: grid;
     max-width: 100%;
