--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
     background-color: rgba(235, 235, 235, 1);
 }
 
-/* Main Header */
+/* Main Body */
 
 .main-body__text {
     font-size: 16px;
